--- a/2.html
+++ b/2.html
@@ -8,9 +8,9 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ul>
-    <li><a href="1.html">1997 12 10</a></li>
-    <li><a href="2.html">osieyn</a></li>
-    <li><a href="3.html">Toeic 950</a></li>
+    <li><a href="1.html">시은이의 출생</a></li>
+    <li><a href="2.html">시은이의 민증</a></li>
+    <li><a href="3.html">시은이의 토익점수</a></li>
   </ul>
 
   <h2>osieyn</h2>
