--- a/3.html
+++ b/3.html
@@ -9,7 +9,7 @@
   <h1><a href="index.html">WEB</a></h1>
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
-    <li><a href="2.html">그녀의 영어이름</a></li>
+    <li><a href="2.html">시은이의 민증</a></li>
     <li><a href="3.html">시은이의 토익점수</a></li>
   </ul>
 
