--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+  <p>
+아아
+  </p>
   <h1><a href="index.html">WEB</a></h1>
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
@@ -19,4 +22,26 @@
   <p>왜냐하면 시은이는 바보이기떄문입니다.</p>
   <p>그녀의 현상수배 포스터입니다.</p>
   <img src="osieyn1.jpg" width="50%">
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web-ewzn8dwtbg.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
 </body>
