--- a/4.html
+++ b/4.html
@@ -17,8 +17,9 @@
     <li><a href="4.html">시은이의 비디오</a></li>
   </ul>
 
-  <h2>1997 12 10</h2>
-  그녀는 97년생 12월 10일에 태어났었지...<br>
-  <p>알에서 태어났었어...</p>
-  크크큭..
+  <h2>시은이의 VIDEO</h2>
+  <p>
+    <iframe width="400" height="300" src="https://www.youtube.com/embed/fWySI0ksv5g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+2019 롤드컵 우승팀 fpx 미드 도인비가 시은이의 닉네임을 불러주는 장면.
 </body>
