--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>시은이의 토익점수</title>
+  <title>시은이의 롤 티어</title>
   <meta charset="utf-8">
 </head>
 
@@ -10,10 +10,14 @@
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
     <li><a href="2.html">시은이의 민증</a></li>
-    <li><a href="3.html">시은이의 토익점수</a></li>
+    <li><a href="3.html">시은이의 롤 티어</a></li>
     <li><a href="4.html">시은이의 비디오</a></li>
   </ul>
 
-  <h2>Toeic 950</h2>
-  그녀는 토익이 950....달달달
+  <h2>Iron 4</h2>
+  그녀는 레벨이 439이지만 아이언4의 실력을 가지고있다.
+  <p>
+    <img src="시이언맨.jpg" width="50%">
+  </p>
+  증거 사진. [저용량 압축이라 깨져 보일수있음.]
 </body>
