--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
     <li><a href="2.html">시은이의 민증</a></li>
-    <li><a href="3.html">시은이의 토익점수</a></li>
+    <li><a href="3.html">시은이의 롤 티어</a></li>
     <li><a href="4.html">시은이의 비디오</a></li>
   </ul>
 
-  <h2>오시은</h2>
-  <strong>hello <u>babo</u></strong>
+  <h2>오시은 백과</h2>
+  <strong>그녀는 바보</strong>
   <br>바보의 정의는 <a href="https://ko.dict.naver.com/#/entry/koko/10ad7abf578e46fdb416c7e258693a83" target="_blank" title="시은이의 뜻">시은</a>입니다.
-  <p>왜냐하면 시은이는 바보이기떄문입니다.</p>
-  <p>그녀의 현상수배 포스터입니다.</p>
-  <img src="osieyn1.jpg" width="50%">
+
   <p>
     <div id="disqus_thread"></div>
     <script>
