--- a/2.html
+++ b/2.html
@@ -15,7 +15,8 @@
   </ul>
 
   <h2>osieyn</h2>
-  시은이는 있잖아...
-  이렇게 생겼어↓<br>
+  <p>
+  시은이의 현재 민증사진은 아래와 같다.
+</p>
   <img src="osieyn1.jpg" width="50%">
 </body>
