--- a/1.html
+++ b/1.html
@@ -18,7 +18,10 @@
   </ul>
 
   <h2>1997 12 10</h2>
-  그녀는 97년생 12월 10일에 태어났었지...<br>
-  <p>알에서 태어났었어...</p>
-  크크큭..
+  그녀는 97년생 12월 10일에 태어남.<br>
+  <p>알에서 태어났었다.</p>
+<p>
+  <img src="시알.jpg" width="50%">
+</p>
+증거사진 입니다.
 </body>
