--- a/2.html
+++ b/2.html
@@ -10,7 +10,7 @@
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
     <li><a href="2.html">시은이의 민증</a></li>
-    <li><a href="3.html">시은이의 롤 티어</a></li>
+    <li><a href="3.html">시은이의 <font color="red">롤 티어</font></a></li>
     <li><a href="4.html">시은이의 비디오</a></li>
   </ul>
 
