--- a/2.html
+++ b/2.html
@@ -3,14 +3,22 @@
 <head>
   <title>시은이의 영어네임</title>
   <meta charset="utf-8">
+
+<style>
+  a {
+    color:black;
+    text-decoration: none;
+  }
+</style>
+
 </head>
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
-    <li><a href="2.html">시은이의 민증</a></li>
-    <li><a href="3.html">시은이의 <font color="red">롤 티어</font></a></li>
+    <li><a href="2.html" style="color:red; text-decoration:none">시은이의 민증</a></li>
+    <li><a href="3.html">시은이의 롤 티어</a></li>
     <li><a href="4.html">시은이의 비디오</a></li>
   </ul>
 
