--- a/index.html
+++ b/index.html
@@ -14,23 +14,33 @@
   gtag('config', 'UA-168761338-1');
 </script>
 
+
+<style>
+  a {
+    color:black;
+    text-decoration: none;
+  }
+</style>
+
+
 </head>
 
 <body>
   <p>
 
   </p>
+
   <h1><a href="index.html">WEB</a></h1>
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
     <li><a href="2.html">시은이의 민증</a></li>
-    <li><a href="3.html">시은이의 <font color="red">롤 티어</font></a></li>
+    <li><a href="3.html">시은이의 롤 티어</a></li>
     <li><a href="4.html">시은이의 비디오</a></li>
   </ul>
 
   <h2>오시은 백과</h2>
   <strong>그녀는 바보</strong>
-  <br>바보의 정의는 <a href="https://ko.dict.naver.com/#/entry/koko/10ad7abf578e46fdb416c7e258693a83" target="_blank" title="시은이의 뜻">시은</a>입니다.
+  <br>바보의 정의는 <a href="https://ko.dict.naver.com/#/entry/koko/10ad7abf578e46fdb416c7e258693a83"style="color:red;text-decoration:underline; target="_blank" title="시은이의 뜻">시은</a>입니다.
 
   <p>
     <div id="disqus_thread"></div>
