--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   </p>
 
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html" style="color:red; text-decoration:none">WEB</a></h1>
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
     <li><a href="2.html">시은이의 민증</a></li>
