--- a/3.html
+++ b/3.html
@@ -10,6 +10,12 @@
       color:black;
       text-decoration: none;
     }
+
+    h1 {
+        font-size:50px;
+        text-align:center;
+      }
+      
   </style>
 
 
