--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     color:black;
     text-decoration: none;
   }
+
+  h1
+    {
+      font-size:50px;
+      text-align:center;
+    }
 </style>
 
 
