--- a/2.html
+++ b/2.html
@@ -13,8 +13,11 @@
   h1 {
       font-size:50px;
       text-align:center;
+      border:5px solid blue;
+      padding:25px;
+      margin:40px;
     }
-    
+
 </style>
 
 </head>
