--- a/1.html
+++ b/1.html
@@ -9,10 +9,13 @@
       color:black;
       text-decoration: none;
     }
-    
+
     h1 {
         font-size:50px;
         text-align:center;
+        border:5px solid blue;
+        padding:25px;
+        margin:40px;
       }
 
   </style>
