--- a/3.html
+++ b/3.html
@@ -14,8 +14,11 @@
     h1 {
         font-size:50px;
         text-align:center;
+        border:5px solid blue;
+        padding:25px;
+        margin:40px;
       }
-      
+
   </style>
 
 
