--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     {
       font-size:50px;
       text-align:center;
+      border:5px solid blue;
+      padding:25px;
+      margin:40px;
+
     }
 </style>
 
