--- a/box.html
+++ b/box.html
@@ -5,14 +5,23 @@
     <title></title>
 
 <style>
+  body{
+    margin:0;
+  }
 h1,a{
-  border:5px solid red;
+  border-bottom:1px solid red;
+  margin:0;
   padding:20px;
-  margin:20px;
-  display:block;
-  width:140px
-}
+  font-size:45px;
+  text-align:center;
 
+}
+ol{
+  border-right:1px solid red;
+  margin:0;
+  padding:20px;
+  width:100px;
+}
 
 </style>
 
@@ -20,6 +29,10 @@ h1,a{
   </head>
   <body>
     <h1>바보백과</h1>
-    <h1>시은바보</h1>
+    <ol>
+      <li>바보시은</li>
+      <li>바보시은</li>
+    </ol>
+
   </body>
 </html>
