--- a/1.html
+++ b/1.html
@@ -10,12 +10,33 @@
       text-decoration: none;
     }
 
-    h1 {
+    h1
+      {
         font-size:50px;
         text-align:center;
-        border:5px solid blue;
-        padding:25px;
-        margin:40px;
+        border-bottom:1px solid blue;
+        margin:0;
+      }
+      ul{
+        border-right:1px solid blue;
+        margin:0;
+        width:140px;
+      }
+
+      body{
+        margin:0;
+      }
+
+      #grid{
+           display:grid;
+           grid-template-columns: 150px 1fr;
+      }
+      #grid ul{
+        padding-top:22px;
+      }
+      #article{
+        padding-left: 49px;
+
       }
 
   </style>
@@ -27,18 +48,22 @@
 
   </p>
   <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
   <ul>
     <li><a href="1.html" style="color:red; text-decoration:none">시은이의 출생</a></li>
     <li><a href="2.html">시은이의 민증</a></li>
     <li><a href="3.html">시은이의 롤 티어</a></li>
     <li><a href="4.html">시은이의 비디오</a></li>
   </ul>
+  <div id="article">
+    <h2>1997 12 10</h2>
+    그녀는 97년생 12월 10일에 태어남.<br>
+    <p>알에서 태어났었다.</p>
 
-  <h2>1997 12 10</h2>
-  그녀는 97년생 12월 10일에 태어남.<br>
-  <p>알에서 태어났었다.</p>
-<p>
-  <img src="시알.jpg" width="50%">
-</p>
-증거사진 입니다.
+    <p>
+      <img src="시알.jpg" width="50%">
+    </p>
+      증거사진 입니다.
+    </div>
+</div>
 </body>
