--- a/2.html
+++ b/2.html
@@ -10,12 +10,32 @@
     text-decoration: none;
   }
 
-  h1 {
+  h1
+    {
       font-size:50px;
       text-align:center;
-      border:5px solid blue;
-      padding:25px;
-      margin:40px;
+      border-bottom:1px solid blue;
+      margin:0;
+    }
+    ul{
+      border-right:1px solid blue;
+      margin:0;
+      width:140px;
+    }
+
+    body{
+      margin:0;
+    }
+
+    #grid{
+         display:grid;
+         grid-template-columns: 150px 1fr;
+    }
+    #grid ul{
+      padding-top:22px;
+    }
+    #article{
+      padding-left: 49px;
     }
 
 </style>
@@ -24,16 +44,19 @@
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
     <li><a href="2.html" style="color:red; text-decoration:none">시은이의 민증</a></li>
     <li><a href="3.html">시은이의 롤 티어</a></li>
     <li><a href="4.html">시은이의 비디오</a></li>
   </ul>
-
-  <h2>osieyn</h2>
-  <p>
-  시은이의 현재 민증사진은 아래와 같다.
-</p>
-  <img src="osieyn1.jpg" width="50%">
+  <div id="article">
+    <h2>osieyn</h2>
+    <p>
+    시은이의 현재 민증사진은 아래와 같다.
+  </p>
+    <img src="osieyn1.jpg" width="50%">
+  </div>
+</div>
 </body>
