--- a/4.html
+++ b/4.html
@@ -10,12 +10,32 @@
       text-decoration: none;
     }
 
-    h1 {
+    h1
+      {
         font-size:50px;
         text-align:center;
-        border:5px solid blue;
-        padding:25px;
-        margin:40px;
+        border-bottom:1px solid blue;
+        margin:0;
+      }
+      ul{
+        border-right:1px solid blue;
+        margin:0;
+        width:140px;
+      }
+
+      body{
+        margin:0;
+      }
+
+      #grid{
+           display:grid;
+           grid-template-columns: 150px 1fr;
+      }
+      #grid ul{
+        padding-top:22px;
+      }
+      #article{
+        padding-left: 49px;
       }
 
   </style>
@@ -28,16 +48,19 @@
 
   </p>
   <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
     <li><a href="2.html">시은이의 민증</a></li>
     <li><a href="3.html">시은이의 롤 티어</a></li>
     <li><a href="4.html" style="color:red; text-decoration:none">시은이의 비디오</a></li>
   </ul>
-
-  <h2>시은이의 VIDEO</h2>
-  <p>
-    <iframe width="400" height="300" src="https://www.youtube.com/embed/fWySI0ksv5g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>
-2019 롤드컵 우승팀 fpx 미드 도인비가 시은이의 닉네임을 불러주는 장면.
+  <div id="article">
+    <h2>시은이의 VIDEO</h2>
+    <p>
+      <iframe width="520" height="300" src="https://www.youtube.com/embed/fWySI0ksv5g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
+  2019 롤드컵 우승팀 fpx 미드 도인비가 시은이의 닉네임을 불러주는 장면.
+  </div>
+</div>
 </body>
