--- a/index.html
+++ b/index.html
@@ -25,9 +25,29 @@
     {
       font-size:50px;
       text-align:center;
-      border:5px solid blue;
-      padding:25px;
-      margin:40px;
+      border:1px solid blue;
+      margin:0;
+    }
+    ul{
+      border-right:1px solid blue;
+      margin:0;
+      width:140px;
+    }
+
+    body{
+      margin:0;
+    }
+
+    #grid{
+         display:grid;
+         grid-template-columns: 150px 1fr;
+    }
+    #grid ul{
+      padding-top:22px;
+    }
+    #article{
+      padding-left: 49px;
+
 
     }
 </style>
@@ -41,17 +61,19 @@
   </p>
 
   <h1><a href="index.html" style="color:red; text-decoration:none">WEB</a></h1>
+  <div id="grid">
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
     <li><a href="2.html">시은이의 민증</a></li>
     <li><a href="3.html">시은이의 롤 티어</a></li>
     <li><a href="4.html">시은이의 비디오</a></li>
   </ul>
-
-  <h2>오시은 백과</h2>
-  <strong>그녀는 바보</strong>
-  <br>바보의 정의는 <a href="https://ko.dict.naver.com/#/entry/koko/10ad7abf578e46fdb416c7e258693a83"style="color:red;text-decoration:underline; target="_blank" title="시은이의 뜻">시은</a>입니다.
-
+  <div id="article">
+    <h2>오시은 백과</h2>
+    <strong>그녀는 바보</strong>
+    <br>바보의 정의는 <a href="https://ko.dict.naver.com/#/entry/koko/10ad7abf578e46fdb416c7e258693a83"style="color:red;text-decoration:underline; target="_blank" title="시은이의 뜻">시은</a>입니다.
+  </div>
+</div>
   <p>
     <div id="disqus_thread"></div>
     <script>
