--- a/3.html
+++ b/3.html
@@ -3,49 +3,12 @@
 <head>
   <title>시은이의 롤 티어</title>
   <meta charset="utf-8">
-
-
-  <style>
-    a {
-      color:black;
-      text-decoration: none;
-    }
-
-    h1
-      {
-        font-size:50px;
-        text-align:center;
-        border-bottom:1px solid blue;
-        margin:0;
-      }
-      ul{
-        border-right:1px solid blue;
-        margin:0;
-        width:140px;
-      }
-
-      body{
-        margin:0;
-      }
-
-      #grid{
-           display:grid;
-           grid-template-columns: 150px 1fr;
-      }
-      #grid ul{
-        padding-top:22px;
-      }
-      #article{
-        padding-left: 49px;
-      }
-
-  </style>
-
-
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
+
   <div id="grid">
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
