--- a/2.html
+++ b/2.html
@@ -1,45 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <title>시은이의 영어네임</title>
+  <title>시은이의 민증</title>
   <meta charset="utf-8">
-
-<style>
-  a {
-    color:black;
-    text-decoration: none;
-  }
-
-  h1
-    {
-      font-size:50px;
-      text-align:center;
-      border-bottom:1px solid blue;
-      margin:0;
-    }
-    ul{
-      border-right:1px solid blue;
-      margin:0;
-      width:140px;
-    }
-
-    body{
-      margin:0;
-    }
-
-    #grid{
-         display:grid;
-         grid-template-columns: 150px 1fr;
-    }
-    #grid ul{
-      padding-top:22px;
-    }
-    #article{
-      padding-left: 49px;
-    }
-
-</style>
-
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
