--- a/index.html
+++ b/index.html
@@ -13,46 +13,7 @@
 
   gtag('config', 'UA-168761338-1');
 </script>
-
-
-<style>
-  a {
-    color:black;
-    text-decoration: none;
-  }
-
-  h1
-    {
-      font-size:50px;
-      text-align:center;
-      border:1px solid blue;
-      margin:0;
-    }
-    ul{
-      border-right:1px solid blue;
-      margin:0;
-      width:140px;
-    }
-
-    body{
-      margin:0;
-    }
-
-    #grid{
-         display:grid;
-         grid-template-columns: 150px 1fr;
-    }
-    #grid ul{
-      padding-top:22px;
-    }
-    #article{
-      padding-left: 49px;
-
-
-    }
-</style>
-
-
+<link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
@@ -61,6 +22,14 @@
   </p>
 
   <h1><a href="index.html" style="color:red; text-decoration:none">WEB</a></h1>
+  <input type="button" value="night" onclick="
+  document.querySelector('body').style.backgroundColor='black';
+  document.querySelector('body').style.color='white';
+  ">
+  <input type="button" value="day" onclick="
+  document.querySelector('body').style.backgroundColor='white';
+  document.querySelector('body').style.color='black';
+  ">
   <div id="grid">
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
