--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   document.querySelector('body').style.backgroundColor='white';
   document.querySelector('body').style.color='black';
   ">
+
+  <input type="button" value="눌러봐!" onclick="alert('오시은바보')">
+
   <div id="grid">
   <ul>
     <li><a href="1.html">시은이의 출생</a></li>
