--- a/1.html
+++ b/1.html
@@ -4,10 +4,15 @@
   <title>시은이의 출생</title>
   <meta charset="utf-8">
  <link rel="stylesheet" href="style.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ <script src="colors.js"></script>
 </head>
 <body>
-  <p>
 
+  <p>
+    <input type="button" value="야간" onclick="
+    nightDayHandler(this)
+  ">
   </p>
   <h1><a href="index.html">WEB</a></h1>
   <div id="grid">
