--- a/4.html
+++ b/4.html
@@ -3,12 +3,16 @@
 <head>
   <title>시은이의 비디오</title>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="colors.js"></script>
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <p>
-
+      <input type="button" value="야간" onclick="
+      nightDayHandler(this)
+    ">
   </p>
   <h1><a href="index.html">WEB</a></h1>
   <div id="grid">
