--- a/index.html
+++ b/index.html
@@ -3,50 +3,16 @@
 <head>
   <title>시은이의 정보</title>
   <meta charset="utf-8">
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168761338-1"></script>
+<script src= "colors.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-168761338-1');
-
-function LinksSetColor(color){
-  var alist = document.querySelectorAll('a');
-  var i = 0;
-  while(i < alist.length){
-    alist[i].style.color = color;
-    i = i + 1;
-  }
-}
-
-function BodySetColor(color){
-  document.querySelector('body').style.color = color;
-}
-
-function BodyBackgroundColor(color){
-  document.querySelector('body').style.backgroundColor = color;
-}
-
-function nightDayHandler(self){
-  var target=document.querySelector('body');
-  if(self.value === '야간'){
-    BodyBackgroundColor('black');
-    BodySetColor('white');
-    self.value ='주간';
-
-    LinksSetColor('powderblue');
-
-  } else {
-    BodyBackgroundColor('white');
-    BodySetColor('black');
-    self.value ='야간';
-
-    LinksSetColor('blue');
-  }
-}
 </script>
 
 <link rel="stylesheet" href="style2.css">
